донавесил модалки на все кнопки заказа

--- a/src/views/blocks/modal-order.j2
+++ b/src/views/blocks/modal-order.j2
@@ -1,7 +1,7 @@
 <div class="modal modal--order">
   <div class="modal__wrapper container">
     <div class="modal__content">
-      <p class="modal__title">Заказать <span class="modal__product-name">сервер HPE ProLiant DL380 Gen10</span></p>
+      <p class="modal__title">Заказать <span class="modal__product-name">тут должно быть имя продукта</span></p>
       <form class="modal__form form" action="https://echo.htmlacademy.ru" method="get">
         <label class="form__label">
           <span class="modal__label-text form__label-text">Ваше имя</span>
