--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -16,6 +16,7 @@
 
 
   {% include "./blocks/modal.j2" %}
+  {% include "./blocks/modal-order.j2" %}
   {% block modal %}{% endblock %}
 
   <script src="./js/burger.min.js"></script>
