--- a/src/views/pages/catalog.j2
+++ b/src/views/pages/catalog.j2
@@ -91,7 +91,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -125,7 +125,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -159,7 +159,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -193,7 +193,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -227,7 +227,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -261,7 +261,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -295,7 +295,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -329,7 +329,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -363,7 +363,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
