--- a/src/views/pages/product-page.j2
+++ b/src/views/pages/product-page.j2
@@ -34,6 +34,7 @@
               <div class="product-page__text-content">
                 <div class="product-page__header">
                   <h1 class="product-page__title title">HPE ProLiant DL380 Gen10</h1>
+                  <span class="product-page__type visually-hidden">Сервер</span>
                   <span class="product-page__vendor filter">
                     <img class="filter__image" src="@img/filter-vendor-iru.png" alt="Логотип компании iru.">
                   </span>
@@ -72,7 +73,7 @@
               </div>
               <div class="product-page__button-wrapper">
                 <span class="product-page__availability">в наличии</span>
-                <button class="product-page__button button" type="button">Заказать</button>
+                <button class="product-page__button order-button button" type="button">Заказать</button>
               </div>
             </div>
           </div>
@@ -318,7 +319,6 @@
 {% endblock content %}
 
 {% block modal %}
-
 {% endblock %}
 
 {% block js %}
