--- a/src/views/pages/vendor-page.j2
+++ b/src/views/pages/vendor-page.j2
@@ -126,7 +126,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -160,7 +160,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -194,7 +194,7 @@
                       <span class="product-card__price">582 940 ₽</span>
                       <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                     </div>
-                    <a class="product-card__button button" href="#!">Заказать</a>
+                    <a class="product-card__button order-button button" href="#!">Заказать</a>
                   </div>
                   <div class="product-card__toolbar">
                     <button class="product-card__toolbar-button product-card__toolbar-button--compare">
