--- a/src/views/blocks/cards-list.j2
+++ b/src/views/blocks/cards-list.j2
@@ -22,7 +22,7 @@
                   <span class="product-card__price">582 940 ₽</span>
                   <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                 </div>
-                <a class="product-card__button button" href="#!">Заказать</a>
+                <a class="product-card__button order-button button" href="#!">Заказать</a>
               </div>
               <div class="product-card__toolbar">
                 <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -56,7 +56,7 @@
                   <span class="product-card__price">582 940 ₽</span>
                   <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                 </div>
-                <a class="product-card__button button" href="#!">Заказать</a>
+                <a class="product-card__button order-button button" href="#!">Заказать</a>
               </div>
               <div class="product-card__toolbar">
                 <button class="product-card__toolbar-button product-card__toolbar-button--compare">
@@ -90,7 +90,7 @@
                   <span class="product-card__price">582 940 ₽</span>
                   <span class="product-card__credit">или <span class="product-card__credit-val">24 290 ₽</span> в месяц</span>
                 </div>
-                <a class="product-card__button button" href="#!">Заказать</a>
+                <a class="product-card__button order-button button" href="#!">Заказать</a>
               </div>
               <div class="product-card__toolbar">
                 <button class="product-card__toolbar-button product-card__toolbar-button--compare">
