--- a/src/scss/blocks/product-page.scss
+++ b/src/scss/blocks/product-page.scss
@@ -395,4 +395,35 @@
   font-size: 14px;
   line-height: 130%;
 }
+.product-page__models-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 
+  display: flex;
+  flex-direction: column;
+}
+.product-page__models-item {
+  padding: 15px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-shadow: 0px -1px 0px #EEEEEE;
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    align-items: center;
+  }
+}
+.product-page__model-link {
+  flex-shrink: 0;
+  @media (min-width: $desktop-width) {
+    width: 275px;
+    justify-content: center;
+  }
+}
+.product-page__model-about {
+  margin: 0;
+  padding: 0;
+
+}
