--- a/src/views/pages/product-page.j2
+++ b/src/views/pages/product-page.j2
@@ -303,6 +303,38 @@
               </div>
               <div class="product-page__pannel tabs__panel">
                 <h3 class="product-page__pannel-title">Готовые модели</h3>
+                <ul class="product-page__models-list">
+                  <li class="product-page__models-item">
+                    <a class="product-page__model-link blue-link blue-link--no-svg" href="#!">875670-425</a>
+                    <p class="product-page__model-about">
+                      HPE ProLiant DL380 Gen10 Bronze 3106 Rack(2U) Xeon8C 1.7GHz(11MB) 1x16GbR2D_2666 P408i-aFBWC(2Gb/RAID 0/1/10/5/50/6/60) 2x300GB_10K(8 24+6up)SFF UMB+DVDRW iLOstd 4HPFans 4x1GbEth EasyRK 1x500w(2up)
+                    </p>
+                  </li>
+                  <li class="product-page__models-item">
+                    <a class="product-page__model-link blue-link blue-link--no-svg" href="#!">875670-425</a>
+                    <p class="product-page__model-about">
+                      HPE ProLiant DL380 Gen10 Bronze 3106 Rack(2U) Xeon8C 1.7GHz(11MB) 1x16GbR2D_2666 P408i-aFBWC(2Gb/RAID 0/1/10/5/50/6/60) 2x300GB_10K(8 24+6up)SFF UMB+DVDRW iLOstd 4HPFans 4x1GbEth EasyRK 1x500w(2up)
+                    </p>
+                  </li>
+                  <li class="product-page__models-item">
+                    <a class="product-page__model-link blue-link blue-link--no-svg" href="#!">875670-425</a>
+                    <p class="product-page__model-about">
+                      HPE ProLiant DL380 Gen10 Bronze 3106 Rack(2U) Xeon8C 1.7GHz(11MB) 1x16GbR2D_2666 P408i-aFBWC(2Gb/RAID 0/1/10/5/50/6/60) 2x300GB_10K(8 24+6up)SFF UMB+DVDRW iLOstd 4HPFans 4x1GbEth EasyRK 1x500w(2up)
+                    </p>
+                  </li>
+                  <li class="product-page__models-item">
+                    <a class="product-page__model-link blue-link blue-link--no-svg" href="#!">875670-425</a>
+                    <p class="product-page__model-about">
+                      HPE ProLiant DL380 Gen10 Bronze 3106 Rack(2U) Xeon8C 1.7GHz(11MB) 1x16GbR2D_2666 P408i-aFBWC(2Gb/RAID 0/1/10/5/50/6/60) 2x300GB_10K(8 24+6up)SFF UMB+DVDRW iLOstd 4HPFans 4x1GbEth EasyRK 1x500w(2up)
+                    </p>
+                  </li>
+                  <li class="product-page__models-item">
+                    <a class="product-page__model-link blue-link blue-link--no-svg" href="#!">875670-425</a>
+                    <p class="product-page__model-about">
+                      HPE ProLiant DL380 Gen10 Bronze 3106 Rack(2U) Xeon8C 1.7GHz(11MB) 1x16GbR2D_2666 P408i-aFBWC(2Gb/RAID 0/1/10/5/50/6/60) 2x300GB_10K(8 24+6up)SFF UMB+DVDRW iLOstd 4HPFans 4x1GbEth EasyRK 1x500w(2up)
+                    </p>
+                  </li>
+                </ul>
               </div>
               <div class="product-page__pannel tabs__panel">
                 <h3 class="product-page__pannel-title">Гарантия и поддержка</h3>
