--- a/src/views/pages/import-replacement.j2
+++ b/src/views/pages/import-replacement.j2
@@ -114,6 +114,7 @@
     </section>
 
     {% include "./blocks/import-features.j2" %}
+    {% include "./blocks/need-help.j2" %}
 
   </main>
 {% endblock content %}
@@ -123,5 +124,6 @@
 {% endblock %}
 
 {% block js %}
+  <script src="./js/need-help.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
