--- a/src/views/header.j2
+++ b/src/views/header.j2
@@ -46,7 +46,7 @@
                 {% endif %}
               </li>
             {% endfor %}
-            <li class="menu__item">
+            <li class="menu__item menu__item--configurator">
               <a class="menu__link menu__link--end menu__link--configurator" href="#!">Конфигуратор</a>
             </li>
           </ul>
