--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -17,7 +17,6 @@ $button-height: 47;
   text-decoration: none;
 
   transition: all 0.3s ease;
-  clip-path: polygon(0 0, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%);
 
   &:hover {
     color: $button-color;
@@ -25,18 +24,7 @@ $button-height: 47;
   }
   &:focus-visible {
     outline: none;
-    background-color: $blue-color;
-    &::after {
-      content: "";
-      position: absolute;
-      top: 2px;
-      bottom: 2px;
-      left: 2px;
-      right: 2px;
-      z-index: -1;
-      clip-path: polygon(0 0, calc(100% - 15px) 0, 100% 50%, calc(100% - 15px) 100%, 0 100%);
-      background-color: $button-color;
-    }
+    outline: 2px solid $blue-color;
   }
   &:active {
     opacity: 0.7;
