--- a/src/scss/blocks/product-card.scss
+++ b/src/scss/blocks/product-card.scss
@@ -134,6 +134,7 @@
   align-items: center;
   text-decoration: none;
   cursor: pointer;
+  font-family: inherit;
   background-color: transparent;
   border: none;
   padding: 2px 5px;
@@ -171,6 +172,7 @@
   margin: 0;
   padding: 0;
 
+  font-family: inherit;
   font-size: 14px;
   line-height: 17px;
   color: $blue-color;
