--- a/src/scss/blocks/product-page.scss
+++ b/src/scss/blocks/product-page.scss
@@ -49,6 +49,7 @@
   padding: 0;
 }
 .product-page__vendor {
+  flex-shrink: 0;
   pointer-events: none;
 }
 .product-page__slogan {
@@ -196,6 +197,7 @@
   padding: 15px 20px;
   border: none;
   background-color: transparent;
+  font-family: inherit;
   font-size: 14px;
   line-height: 17px;
   text-decoration: underline;
