добавил настройки стайллинта

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,7 @@
 // @import "./vendor/choices/base.min.scss";
 @import "./vendor/choices/choices.min.scss";
 @import "./vendor/swiper/swiper-bundle.scss";
-
+//
 @import "./blocks/visually-hidden.scss";
 @import "./blocks/container.scss";
 @import "./blocks/tabs.scss";
@@ -25,7 +25,7 @@
 @import "./blocks/modal.scss";
 @import "./blocks/modal-image.scss";
 @import "./blocks/swiper.scss";
-
+//
 @import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
 @import "./blocks/page-main.scss";
