--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -16,7 +16,8 @@ $black-color: #232323;
 $grey-color: #818181;
 $aqua-color: #2aa898;
 $blue-color: #0eadff;
+$testcolor: #FFFEEE;
 
-//Paddings
+// Paddings
 $paddings-mobile: 8px;
 $paddings-desktop: 100px;
